--- a/package.json
+++ b/package.json
@@ -90,27 +90,6 @@
     "@webcomponents/webcomponentsjs": "^1.0.14",
     "array.from": "^1.0.3",
     "autoprefixer": "^7.1.4",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-jsx-pragmatic": "^1.0.2",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-syntax-class-properties": "^6.13.0",
-    "babel-plugin-transform-builtin-classes": "^0.4.0",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-skate-flow-props": "^0.1.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-traverse": "^6.26.0",
-    "babel-types": "^6.24.1",
     "babylon": "^6.16.1",
     "backstopjs": "^3.0.31",
     "camel-case": "^3.0.0",
@@ -180,7 +159,15 @@
     "validate-commit-msg": "^2.12.2",
     "web-component-refs": "^0.0.2",
     "web-component-tester": "^6.3.0",
-    "xo": "^0.18.2"
+    "xo": "^0.18.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0"
   },
   "devDependencies": {
     "husky": "^0.14.3"
