--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -9,8 +9,13 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
+    "globby": "^6.1.0",
+    "@bolt/build-patternlab": "^0.5.2",
+    "event-hooks-webpack-plugin": "^1.0.0",
     "@bolt/components-all": "^0.6.3",
     "@bolt/core": "^0.4.1",
+    "@bolt/components-nav-bar": "^0.0.0",
+    "@bolt/components-smooth-scroll": "^0.0.0",
     "@bolt/components-card": "^0.5.6",
     "@bolt/components-critical-fonts": "^0.4.10",
     "@bolt/components-device-viewer": "^0.1.1",
@@ -37,6 +42,16 @@
     "postcss-loader": "^2.0.9",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-dynamic-import-node": "^1.2.0"
   }
 }
