--- a/package.json
+++ b/package.json
@@ -76,9 +76,10 @@
   "devDependencies": {
     "backstopjs": "^3.0.31",
     "gulp": "gulpjs/gulp#4.0",
+    "husky": "^0.14.3",
+    "lerna": "^2.5.1",
     "lighthouse": "^2.5.0",
-    "web-component-tester": "^6.3.0",
-    "husky": "^0.14.3"
+    "web-component-tester": "^6.3.0"
   },
   "workspaces": [
     "packages/assets",
