Adding local build command to PL app

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "license": "MIT",
   "main": "bolt.js",
+  "scripts": {
+    "build": "webpack"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/bolt-design-system/bolt"
