--- a/apps/pattern-lab--workshop/composer.json
+++ b/apps/pattern-lab--workshop/composer.json
@@ -57,8 +57,7 @@
       "oomphinc/composer-installers-extender": "dev-master",
       "bolt/twig-extensions": "*",
       "gajus/dindent": "dev-master",
-      "symfony/yaml": "*",
-        "justinrainbow/json-schema": "^5.0@dev"
+      "symfony/yaml": "*"
     },
     "config": {
         "process-timeout": 0,
