fix: Fix package.json versions of local lerna versioned deps. Add example of local JS build using Bolt Build Tools.

--- a/src/_patterns/02-components/bolt-sticky/package.json
+++ b/src/_patterns/02-components/bolt-sticky/package.json
@@ -43,7 +43,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.4.1"
+    "@bolt/build-webpack": "^0.5.0-alpha.2"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
