--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@bolt/components-all": "^0.7.0-alpha.5",
     "@bolt/components-band": "^0.6.0-alpha.2",
+    "@bolt/core": "^0.5.0-alpha.2",
     "@bolt/components-brightcove-player": "^0.1.0-alpha.2",
     "@bolt/components-button": "^0.7.0-alpha.2",
     "@bolt/components-card": "^0.6.0-alpha.2",
@@ -21,7 +22,7 @@
     "@bolt/components-nav-bar": "^0.1.0-alpha.2",
     "@bolt/components-smooth-scroll": "^0.1.0-alpha.2",
     "@bolt/components-video": "^0.1.0-alpha.5",
-    "@bolt/components-sticky": "^0.0.0",
+    "@bolt/components-sticky": "^0.1.0-alpha.2",
     "@bolt/elements-all": "^0.5.4",
     "@bolt/generic-all": "^0.5.2",
     "@bolt/objects-all": "^0.5.0-alpha.2",
