--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@bolt/build-webpack",
-	"version": "0.5.0-alpha.2",
+	"version": "0.5.0-beta.0",
 	"license": "MIT",
 	"description": "Webpack",
 	"main": "webpack.js",
