--- a/packages/bolt-twig-extensions/package.json
+++ b/packages/bolt-twig-extensions/package.json
@@ -6,7 +6,7 @@
     "twig extensions",
     "pattern lab"
   ],
-  "version": "0.4.0-alpha.2",
+  "version": "0.4.0-beta.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
