--- a/src/_patterns/01-core/07-utilities/utilities-text-align/package.json
+++ b/src/_patterns/01-core/07-utilities/utilities-text-align/package.json
@@ -8,7 +8,7 @@
     "design system",
     "utilities"
   ],
-  "version": "0.3.0-alpha.2",
+  "version": "0.3.0-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
