--- a/src/_patterns/02-components/bolt-action-blocks/package.json
+++ b/src/_patterns/02-components/bolt-action-blocks/package.json
@@ -9,7 +9,7 @@
     "design system",
     "components"
   ],
-  "version": "0.4.0-alpha.2",
+  "version": "0.4.0-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
