--- a/src/_patterns/02-components/bolt-button-group/package.json
+++ b/src/_patterns/02-components/bolt-button-group/package.json
@@ -10,7 +10,7 @@
     "design system",
     "button group"
   ],
-  "version": "0.3.0-alpha.2",
+  "version": "0.3.0-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
