--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -21,7 +21,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.7.0-alpha.2",
+  "version": "0.7.0-beta.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -36,10 +36,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.5.0-alpha.2"
+    "@bolt/build-webpack": "^0.5.0-beta.0"
   },
   "dependencies": {
-    "@bolt/core": "^0.5.0-alpha.2",
+    "@bolt/core": "^0.5.0-beta.0",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/tools-all": "^0.5.4"
   },
