--- a/src/_patterns/02-components/bolt-chip/package.json
+++ b/src/_patterns/02-components/bolt-chip/package.json
@@ -9,7 +9,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.3.0-alpha.2",
+  "version": "0.3.0-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
