--- a/src/_patterns/02-components/bolt-figure/package.json
+++ b/src/_patterns/02-components/bolt-figure/package.json
@@ -10,7 +10,7 @@
 		"design system",
 		"components"
 	],
-	"version": "0.2.0-alpha.2",
+	"version": "0.2.0-beta.0",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
