--- a/src/_patterns/02-components/bolt-headline/package.json
+++ b/src/_patterns/02-components/bolt-headline/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.7.0-alpha.2",
+  "version": "0.7.0-beta.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
