--- a/src/_patterns/02-components/bolt-image/package.json
+++ b/src/_patterns/02-components/bolt-image/package.json
@@ -9,7 +9,7 @@
     "component",
     "image"
   ],
-  "version": "0.4.0-alpha.2",
+  "version": "0.4.0-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -37,11 +37,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "^0.7.0-alpha.2",
+    "@bolt/objects-ratio": "^0.7.0-beta.0",
     "lazysizes": "^4.0.0-rc4"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.5.0-alpha.2"
+    "@bolt/build-webpack": "^0.5.0-beta.0"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
