--- a/src/_patterns/02-components/bolt-logo/package.json
+++ b/src/_patterns/02-components/bolt-logo/package.json
@@ -13,7 +13,7 @@
     "image",
     "logo"
   ],
-  "version": "0.3.0-alpha.2",
+  "version": "0.3.0-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -40,7 +40,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/objects-ratio": "^0.7.0-alpha.2",
+    "@bolt/objects-ratio": "^0.7.0-beta.0",
     "@bolt/tools-spacing": "^0.5.0"
   }
 }
