--- a/src/_patterns/02-components/bolt-page-header/package.json
+++ b/src/_patterns/02-components/bolt-page-header/package.json
@@ -8,7 +8,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.0.2",
+  "version": "0.0.3-beta.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
