--- a/src/_patterns/02-components/bolt-site/package.json
+++ b/src/_patterns/02-components/bolt-site/package.json
@@ -9,7 +9,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.6.0-alpha.2",
+  "version": "0.6.0-beta.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
