--- a/src/_patterns/02-components/bolt-smooth-scroll/package.json
+++ b/src/_patterns/02-components/bolt-smooth-scroll/package.json
@@ -8,7 +8,7 @@
     "design system",
     "component"
   ],
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -39,7 +39,7 @@
     "access": "public"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.5.0-alpha.2"
+    "@bolt/build-webpack": "^0.5.0-beta.0"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
