--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/bolt",
   "description": "Bolt Design System",
-  "version": "0.6.0-alpha.5",
+  "version": "0.6.0-beta.0",
   "license": "MIT",
   "main": "bolt.js",
   "repository": {
@@ -9,27 +9,27 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/components-all": "^0.7.0-alpha.5",
-    "@bolt/components-band": "^0.6.0-alpha.2",
-    "@bolt/core": "^0.5.0-alpha.2",
-    "@bolt/components-brightcove-player": "^0.1.0-alpha.2",
-    "@bolt/components-button": "^0.7.0-alpha.2",
-    "@bolt/components-card": "^0.6.0-alpha.2",
-    "@bolt/components-critical-fonts": "^0.5.0-alpha.2",
-    "@bolt/components-device-viewer": "^0.2.0-alpha.2",
-    "@bolt/components-icon": "^0.4.0-alpha.2",
-    "@bolt/components-image": "^0.4.0-alpha.2",
-    "@bolt/components-nav-bar": "^0.1.0-alpha.2",
-    "@bolt/components-smooth-scroll": "^0.1.0-alpha.2",
-    "@bolt/components-video": "^0.1.0-alpha.5",
-    "@bolt/components-sticky": "^0.1.0-alpha.2",
+    "@bolt/components-all": "^0.7.0-beta.0",
+    "@bolt/components-band": "^0.6.0-beta.0",
+    "@bolt/components-brightcove-player": "^0.1.0-beta.0",
+    "@bolt/components-button": "^0.7.0-beta.0",
+    "@bolt/components-card": "^0.6.0-beta.0",
+    "@bolt/components-critical-fonts": "^0.5.0-beta.0",
+    "@bolt/components-device-viewer": "^0.2.0-beta.0",
+    "@bolt/components-icon": "^0.4.0-beta.0",
+    "@bolt/components-image": "^0.4.0-beta.0",
+    "@bolt/components-nav-bar": "^0.1.0-beta.0",
+    "@bolt/components-smooth-scroll": "^0.1.0-beta.0",
+    "@bolt/components-sticky": "^0.1.0-beta.0",
+    "@bolt/components-video": "^0.1.0-beta.0",
+    "@bolt/core": "^0.5.0-beta.0",
     "@bolt/elements-all": "^0.5.4",
     "@bolt/generic-all": "^0.5.2",
-    "@bolt/objects-all": "^0.5.0-alpha.2",
-    "@bolt/objects-ratio": "^0.7.0-alpha.2",
+    "@bolt/objects-all": "^0.5.0-beta.0",
+    "@bolt/objects-ratio": "^0.7.0-beta.0",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/themes-all": "^0.6.1",
     "@bolt/tools-all": "^0.5.4",
-    "@bolt/utilities-all": "^0.7.0-alpha.2"
+    "@bolt/utilities-all": "^0.7.0-beta.0"
   }
 }
