--- a/lerna.json
+++ b/lerna.json
@@ -20,7 +20,7 @@
   ],
   "command": {
     "publish": {
-      "message": "chore(release): publish %s"
+      "allowBranch": "master"
     },
     "bootstrap": {
       "hoist": true
