--- a/packages/bolt/package.json
+++ b/packages/bolt/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@bolt/bolt",
-  "description": "Bolt Design System",
+  "description": "Latest in the Bolt Design System",
   "version": "0.6.0-beta.0",
   "license": "MIT",
-  "main": "bolt.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/bolt-design-system/bolt"
@@ -31,5 +30,23 @@
     "@bolt/themes-all": "^0.6.1",
     "@bolt/tools-all": "^0.5.4",
     "@bolt/utilities-all": "^0.7.0-beta.0"
-  }
+  },
+  "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "npm-run-all --parallel build:*",
+    "build:wwwd8":
+      "./node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js bolt=./bolt --output-chunk-filename='[name]-wwwd8.min.js' --output-filename='bolt-wwwd8.min.js' --output-public-path /bolt-scripts",
+    "build:bolt":
+      "./node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js bolt=./bolt --output-chunk-filename='[name].min.js' --output-filename='bolt.min.js' --output-public-path /dist"
+  },
+  "devDependencies": {
+    "@bolt/core": "^0.5.0-beta.0",
+    "@bolt/build-webpack": "^0.5.0-beta.0",
+    "npm-run-all": "^4.0.2"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "main": "bolt.js",
+  "style": "bolt.scss"
 }
