chore: update patternlab config.yml w/ new demo paths added.

--- a/config/config.yml
+++ b/config/config.yml
@@ -103,6 +103,7 @@ plugins:
           - src/_patterns/02-components/bolt-figure/src
           - src/_patterns/02-components/bolt-headline/demo
           - src/_patterns/02-components/bolt-headline/demo/h1-through-h6
+          - src/_patterns/02-components/bolt-headline/demo/text-alignment
           - src/_patterns/02-components/bolt-headline/src
           - src/_patterns/02-components/bolt-icon/src
           - src/_patterns/02-components/bolt-image/src
