--- a/src/_patterns/01-core/05-objects/bolt-all-objects/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-all-objects/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.5.0-beta.3",
+  "version": "0.5.0-beta.4",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -39,7 +39,7 @@
     "@bolt/objects-block": "^0.2.0",
     "@bolt/objects-crop": "^0.2.0",
     "@bolt/objects-flag": "^0.4.1",
-    "@bolt/objects-grid": "^0.5.0",
+    "@bolt/objects-grid": "^0.5.1-beta.0",
     "@bolt/objects-inline-list": "^0.4.0",
     "@bolt/objects-island": "^0.4.0",
     "@bolt/objects-ratio": "^0.7.0-beta.3",
