--- a/src/_patterns/01-core/05-objects/bolt-grid-object/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-grid-object/package.json
@@ -12,7 +12,7 @@
     "objects",
     "grid"
   ],
-  "version": "0.5.0",
+  "version": "0.5.1-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
