--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -278,6 +278,31 @@ headline:
   filename: headline.twig
   path: src/_patterns/02-components/bolt-headline/src/headline.twig
   namespace: '@bolt/headline.twig'
+headline_demo__align_center:
+  filename: 02-headline-demo--align-center.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/02-headline-demo--align-center.twig
+  namespace: '@bolt/02-headline-demo--align-center.twig'
+headline_demo__align_left:
+  filename: 01-headline-demo--align-left.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/01-headline-demo--align-left.twig
+  namespace: '@bolt/01-headline-demo--align-left.twig'
+headline_demo__align_null:
+  filename: 04-headline-demo--align-null.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/04-headline-demo--align-null.twig
+  namespace: '@bolt/04-headline-demo--align-null.twig'
+headline_demo__align_right:
+  filename: 03-headline-demo--align-right.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/03-headline-demo--align-right.twig
+  namespace: '@bolt/03-headline-demo--align-right.twig'
+headline_demo__align_typo:
+  filename: 05-headline-demo--align-typo.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/05-headline-demo--align-typo.twig
+  namespace: '@bolt/05-headline-demo--align-typo.twig'
 headline_kitchen_sink:
   filename: headline-kitchen-sink.twig
   path: src/_patterns/02-components/bolt-headline/demo/headline-kitchen-sink.twig
