--- a/packages/bolt-config-presets/babel-preset-bolt/package.json
+++ b/packages/bolt-config-presets/babel-preset-bolt/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -22,6 +23,7 @@
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-es2015-parameters": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
