--- a/src/_patterns/02-components/bolt-icons/package.json
+++ b/src/_patterns/02-components/bolt-icons/package.json
@@ -25,20 +25,9 @@
     "access": "public"
   },
   "dependencies": {
+    "@bolt/babel-preset-bolt": "^0.0.0",
     "@bolt/core": "^0.5.0-beta.1",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-plugin-jsx-pragmatic": "^1.0.2",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-preact": "^1.1.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "camelcase": "^4.1.0",
     "cheerio": "^1.0.0-rc.2",
     "fs": "0.0.1-security",
