--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -23,6 +23,7 @@
 	],
 	"dependencies": {
 		"awesome-typescript-loader": "^3.2.3",
+		"babel-loader": "^7.1.2",
 		"clean-css-loader": "^0.1.3",
 		"clean-webpack-plugin": "^0.1.17",
 		"copy-webpack-plugin": "^4.1.1",
