fix: rename eslint package to fix broken eslint package name resolution

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   "homepage": "https://github.com/bolt-design-system/bolt#readme",
   "dependencies": {
     "@bolt/config-stylelint": "file:packages/bolt-config-presets/config-stylelint",
-    "@bolt/eslint-config": "file:packages/bolt-config-presets/config-eslint",
+    "@bolt/eslint-config-bolt": "file:packages/bolt-config-presets/eslint-config-bolt",
     "array.from": "^1.0.3",
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.22.1",
