--- a/packages/bolt-config-presets/browserslist-config-bolt/package.json
+++ b/packages/bolt-config-presets/browserslist-config-bolt/package.json
@@ -23,7 +23,7 @@
   "main": "index.js",
   "devDependencies": {
     "browserslist": "^2.10.0",
-    "@bolt/config-eslint": "^0.4.0-beta.0"
+    "@bolt/eslint-config-bolt": "^0.4.0-beta.0"
   },
   "scripts": {
     "test": "npm run lint && node test",
