--- a/packages/bolt-config-presets/eslint-config-bolt/package.json
+++ b/packages/bolt-config-presets/eslint-config-bolt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bolt/config-eslint",
+  "name": "@bolt/eslint-config-bolt",
   "description": "Bolt Design System's ESLint config",
   "keywords": [
     "eslint",
