fix: fix eslint linter errors in browserslist config + working test

--- a/packages/bolt-config-presets/browserslist-config-bolt/package.json
+++ b/packages/bolt-config-presets/browserslist-config-bolt/package.json
@@ -21,8 +21,10 @@
     "access": "public"
   },
   "main": "index.js",
+  "dependencies": {
+    "browserslist": "^2.10.0"
+  },
   "devDependencies": {
-    "browserslist": "^2.10.0",
     "@bolt/eslint-config-bolt": "^0.4.0-beta.0"
   },
   "scripts": {
