chore: tooltip setup

--- a/config/config.yml
+++ b/config/config.yml
@@ -122,6 +122,7 @@ plugins:
           - src/_patterns/02-components/bolt-sticky/demo
           - src/_patterns/02-components/bolt-sticky/src
           - src/_patterns/02-components/bolt-teaser/src
+          - src/_patterns/02-components/bolt-tooltip/src
           - src/_patterns/02-components/bolt-unordered-list/demo/theming
           - src/_patterns/02-components/bolt-unordered-list/src
           - src/_patterns/02-components/bolt-video/demo
@@ -129,6 +130,7 @@ plugins:
           - src/_patterns/02-components/brightcove-player/src
           - src/_patterns/03-templates/default
           - src/_patterns/04-pages/bolt-homepage
+          - src/_patterns/04-pages/bolt-sandbox
           - src/_patterns/04-pages/bolt-theming-qa
           - src/_patterns/04-pages/d8-homepage
           - src/_patterns/04-pages/d8-product-landing
