--- a/src/_patterns/02-components/components-all/package.json
+++ b/src/_patterns/02-components/components-all/package.json
@@ -62,6 +62,7 @@
     "@bolt/components-sticky": "^0.1.0-beta.2",
     "@bolt/components-teaser": "^0.2.0",
     "@bolt/components-unordered-list": "^0.2.0-beta.0",
-    "@bolt/components-video": "^0.1.0-beta.3"
+    "@bolt/components-video": "^0.1.0-beta.3",
+    "@bolt/components-tooltip": "^0.0.0"
   }
 }
