--- a/src/_patterns/02-components/components-all/package.json
+++ b/src/_patterns/02-components/components-all/package.json
@@ -45,6 +45,7 @@
     "@bolt/components-button-group": "^0.3.0-beta.0",
     "@bolt/components-card": "^0.6.0-beta.3",
     "@bolt/components-chip": "^0.3.0-beta.0",
+    "@bolt/components-figure": "^0.2.0-beta.0",
     "@bolt/components-chip-list": "^0.3.0-beta.0",
     "@bolt/components-color-swatch": "^0.5.0",
     "@bolt/components-critical-fonts": "^0.5.0-beta.3",
