wip: tooltip styles

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -125,6 +125,10 @@ bolt_homepage:
   filename: bolt-homepage.twig
   path: src/_patterns/04-pages/bolt-homepage/bolt-homepage.twig
   namespace: '@bolt/bolt-homepage.twig'
+bolt_tooltips:
+  filename: bolt-tooltips.twig
+  path: src/_patterns/04-pages/bolt-sandbox/bolt-tooltips.twig
+  namespace: '@bolt/bolt-tooltips.twig'
 bottom_bar:
   filename: _bottom-bar.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_bottom-bar.twig
@@ -278,6 +282,31 @@ headline:
   filename: headline.twig
   path: src/_patterns/02-components/bolt-headline/src/headline.twig
   namespace: '@bolt/headline.twig'
+headline_demo__align_center:
+  filename: 02-headline-demo--align-center.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/02-headline-demo--align-center.twig
+  namespace: '@bolt/02-headline-demo--align-center.twig'
+headline_demo__align_left:
+  filename: 01-headline-demo--align-left.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/01-headline-demo--align-left.twig
+  namespace: '@bolt/01-headline-demo--align-left.twig'
+headline_demo__align_null:
+  filename: 04-headline-demo--align-null.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/04-headline-demo--align-null.twig
+  namespace: '@bolt/04-headline-demo--align-null.twig'
+headline_demo__align_right:
+  filename: 03-headline-demo--align-right.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/03-headline-demo--align-right.twig
+  namespace: '@bolt/03-headline-demo--align-right.twig'
+headline_demo__align_typo:
+  filename: 05-headline-demo--align-typo.twig
+  path: >-
+    src/_patterns/02-components/bolt-headline/demo/text-alignment/05-headline-demo--align-typo.twig
+  namespace: '@bolt/05-headline-demo--align-typo.twig'
 headline_kitchen_sink:
   filename: headline-kitchen-sink.twig
   path: src/_patterns/02-components/bolt-headline/demo/headline-kitchen-sink.twig
@@ -514,6 +543,10 @@ theme_demo:
   filename: theme-demo.twig
   path: src/_patterns/00-utils/theme-demo.twig
   namespace: '@bolt/theme-demo.twig'
+tooltip:
+  filename: tooltip.twig
+  path: src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
+  namespace: '@bolt/tooltip.twig'
 top_bar:
   filename: _top-bar.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_top-bar.twig
