--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ src/_patternspatternStore.html
 src/_patternspatternSubtype.html
 src/_patternspatternType.html
 bolt-manifest.json
+bolt-manifest.yml
 
 
 
