chore: add package-lock.json to .gitignore. Epic v1.0 switch to Yarn replacing the need for these -- switching over to yarn.lock

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ cache
 *.psd
 *.tmp
 dist
+package-lock.json # yarn.lock replacing the need for these
 
 ## installed to src/_twig-components via composer
 src/_twig-components
