fix: fixing Travis build by adding new browserslist config local link path to root package.json file. Workaround Lerna getting confused about symlinking packages we're manually telling NPM to link together.

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@bolt/babel-preset-bolt": "file:packages/bolt-config-presets/babel-preset-bolt",
     "@bolt/config-stylelint": "file:packages/bolt-config-presets/config-stylelint",
     "@bolt/eslint-config-bolt": "file:packages/bolt-config-presets/eslint-config-bolt",
+    "@bolt/browserslist-config-bolt": "file:packages/bolt-config-presets/browserslist-config-bolt",
     "array.from": "^1.0.3",
     "autoprefixer": "^7.1.4",
     "backstopjs": "^3.0.31",
