chore: adding missing publish config to babel-preset-config package

--- a/packages/bolt-config-presets/babel-preset-bolt/package.json
+++ b/packages/bolt-config-presets/babel-preset-bolt/package.json
@@ -40,5 +40,8 @@
   ],
   "browserslist": [
     "extends @bolt/browserslist-config-bolt"
-  ]
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
