--- a/packages/bolt-config-presets/babel-preset-bolt/package.json
+++ b/packages/bolt-config-presets/babel-preset-bolt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/babel-preset-bolt",
-  "version": "0.0.0",
+  "version": "0.0.1-beta.0",
   "description": "Babel preset shared across the Bolt Design System",
   "author": {
     "name": "Salem Ghoweri",
@@ -13,8 +13,8 @@
     ]
   },
   "dependencies": {
-    "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
