--- a/src/_patterns/01-core/05-objects/bolt-all-objects/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-all-objects/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.5.0-beta.4",
+  "version": "0.5.0-beta.5",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -38,12 +38,12 @@
     "@bolt/objects-bare-list": "^0.2.0",
     "@bolt/objects-block": "^0.2.0",
     "@bolt/objects-crop": "^0.2.0",
-    "@bolt/objects-flag": "^0.4.1",
-    "@bolt/objects-grid": "^0.5.1-beta.0",
+    "@bolt/objects-flag": "^0.4.2-beta.0",
+    "@bolt/objects-grid": "^0.5.1-beta.1",
     "@bolt/objects-inline-list": "^0.4.0",
     "@bolt/objects-island": "^0.4.0",
-    "@bolt/objects-ratio": "^0.7.0-beta.3",
-    "@bolt/objects-ui-list": "^0.5.0",
+    "@bolt/objects-ratio": "^0.7.0-beta.4",
+    "@bolt/objects-ui-list": "^0.5.1-beta.0",
     "@bolt/objects-wrapper": "^0.5.3"
   }
 }
