--- a/src/_patterns/01-core/05-objects/bolt-flag-object/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-flag-object/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.4.1",
+  "version": "0.4.2-beta.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
