--- a/src/_patterns/02-components/bolt-icons/package.json
+++ b/src/_patterns/02-components/bolt-icons/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.2.0-beta.1",
+  "version": "0.2.0-beta.2",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -25,7 +25,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/babel-preset-bolt": "^0.0.0",
+    "@bolt/babel-preset-bolt": "^0.0.1-beta.0",
     "@bolt/core": "^0.5.0-beta.1",
     "babel-cli": "^6.26.0",
     "camelcase": "^4.1.0",
