--- a/src/_patterns/01-core/07-utilities/utilities-spacing/package.json
+++ b/src/_patterns/01-core/07-utilities/utilities-spacing/package.json
@@ -33,5 +33,9 @@
   "style": "_utilities.spacing.scss",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/settings-all": "^0.7.4",
+    "@bolt/tools-all": "^0.5.4"
   }
 }
