--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "postcss-loader": "^2.0.8",
     "prettier-eslint-cli": "^4.2.1",
     "publish-please": "^2.3.1",
+    "puppeteer": "^0.13.0",
     "read-pkg-up": "^2.0.0",
     "recast": "^0.12.7",
     "remark-cli": "^4.0.0",
