--- a/packages/bolt-twig-extensions/composer.json
+++ b/packages/bolt-twig-extensions/composer.json
@@ -22,7 +22,8 @@
     "gregwar/image": "*",
     "mexitek/phpcolors": "^0.4.0",
     "justinrainbow/json-schema": "^5.2",
-    "symfony/yaml": "^3.3"
+    "symfony/yaml": "^3.3",
+    "symfony/process": "^3.1"
   },
   "extra": {
     "installer-name": "_twig-components"
