--- a/packages/bolt-config-presets/babel-preset-bolt/package.json
+++ b/packages/bolt-config-presets/babel-preset-bolt/package.json
@@ -13,22 +13,18 @@
     ]
   },
   "dependencies": {
-    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-plugin-transform-es2015-parameters": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
+    "@babel/plugin-syntax-jsx": "^7.0.0-beta.36",
+    "@babel/core": "^7.0.0-beta.36",
+    "@babel/plugin-syntax-decorators": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.36",
+    "@babel/plugin-transform-object-assign": "^7.0.0-beta.36",
+    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.36",
+    "@babel/preset-env": "^v7.0.0-beta.36",
+    "@babel/preset-stage-3": "^v7.0.0-beta.36",
+    "@babel/plugin-transform-classes": "^v7.0.0-beta.36",
+    "@babel/plugin-syntax-class-properties": "^7.0.0-beta.36",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.36"
   },
   "keywords": [
     "babel",
