--- a/config/config.yml
+++ b/config/config.yml
@@ -100,6 +100,7 @@ plugins:
           - src/_patterns/02-components/bolt-device-viewer/src/devices
           - src/_patterns/02-components/bolt-device-viewer/src/parts
           - src/_patterns/02-components/bolt-figure/src
+          - src/_patterns/02-components/bolt-forms/src
           - src/_patterns/02-components/bolt-headline/demo
           - src/_patterns/02-components/bolt-headline/demo/h1-through-h6
           - src/_patterns/02-components/bolt-headline/src
