--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -41,7 +41,8 @@
   "dependencies": {
     "@bolt/core": "^0.9.0-rc.0",
     "@bolt/settings-all": "^0.9.0-rc.0",
-    "@bolt/tools-all": "^0.9.0-rc.0"
+    "@bolt/tools-all": "^0.9.0-rc.0",
+    "@bolt/utilities-spacing": "^0.9.0-rc.0"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
