--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -41,7 +41,8 @@
   "dependencies": {
     "@bolt/core": "^0.5.0-beta.1",
     "@bolt/settings-all": "^0.7.4",
-    "@bolt/tools-all": "^0.5.4"
+    "@bolt/tools-all": "^0.5.4",
+    "@bolt/utilities-spacing": "^0.5.0"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
