Adding missing monorepo packages: config*

--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,8 @@
   "lerna": "2.5.1",
   "version": "independent",
   "packages": [
-    "packages/**",
+    "packages/*",
+    "packages/config-presets/*",
     "apps/pattern-lab--workshop"
   ],
   "command": {
