--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "packages/assets",
     "packages/build-tools",
     "packages/components/*",
-    "packages/config-presets",
+    "packages/config-presets/*",
     "packages/core",
     "packages/twig-extensions",
     "apps/pattern-lab--workshop"
