--- a/src/_patterns/02-components/brightcove-player/package.json
+++ b/src/_patterns/02-components/brightcove-player/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "@bolt/core": "^0.9.0-rc.1",
     "@bolt/settings-all": "^0.9.0-rc.1",
-    "@bolt/tools-all": "^0.9.0-rc.1"
+    "@bolt/tools-all": "^0.9.0-rc.1",
+    "dasherize": "^2.0.0"
   },
   "publishConfig": {
     "access": "public"
