--- a/packages/config-presets/babel-preset-bolt/package.json
+++ b/packages/config-presets/babel-preset-bolt/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
