--- a/packages/global/package.json
+++ b/packages/global/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/core": "*"
+    "@bolt/core": "0.5.0-beta.1",
+    "normalize-scss": "^7.0.0"
   }
 }
