--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "@bolt/bolt",
+  "name": "@bolt/pattern-lab--workshop",
   "description": "Bolt Design System",
   "version": "0.5.3",
   "private": true,
   "license": "MIT",
   "main": "bolt.js",
   "scripts": {
-    "build": "webpack"
+    "build": "bolt-build",
+    "start": "bolt-build --watch"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/build-tools": "*",
-    "@bolt/components-button": "*",
-    "@bolt/components-card": "*",
-    "@bolt/components-nav-bar": "0.1.0-alpha.0",
-    "@bolt/core-css": "link:../../packages/core-css",
-    "webpack": "^3.10.0"
+    "@bolt/build-tools": "0.5.1",
+    "@bolt/core": "0.5.0-beta.1",
+    "@bolt/global": "0.5.0"
   }
 }
