--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "deploy": "netlify deploy -s bolt.netlify.com -p dist",
     "Xlint:js": "eslint ./build-tools",
     "Xlint:scss": "gulp styles:lint",
-    "Xclean:lerna": "lerna clean -Y",
+    "clean:lerna": "lerna clean -Y",
     "Xclean:lighthouse": "rm *.report.html",
-    "Xclean:all": "npm run clean:git && npm run clean:lerna",
+    "clean": "npm run clean:git && npm run clean:lerna",
     "Xlint": "npm-run-all --parallel lint:* -c",
     "Xmocha": "npm run mocha:build-tools",
     "Xmocha:build-tools": "mocha ./packages/build-tools/**/tests/*.test.js",
