--- a/packages/components/bolt-button/package.json
+++ b/packages/components/bolt-button/package.json
@@ -1,18 +1,8 @@
 {
   "name": "@bolt/components-button",
-  "patternName": "button",
-  "patternType": "components",
-  "patternSubType": "buttons",
   "style": "src/button.scss",
-  "main": "dist/bolt-button.min.js",
-  "module:dev": "src/button.js",
-  "templates": {
-    "button": {
-      "filename": "button.twig",
-      "path": "src/button.twig",
-      "namespace": "@bolt/button.twig"
-    }
-  },
+  "main": "src/button.js",
+  "twig": "src/button.twig",
   "description": "Button Component",
   "keywords": [
     "eyeglass-module",
@@ -35,19 +25,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "devDependencies": {
-    "@bolt/build-webpack": "^0.5.0-beta.4"
-  },
   "dependencies": {
-    "@bolt/core": "^0.5.0-beta.1",
-    "@bolt/settings-all": "^0.7.4",
-    "@bolt/tools-all": "^0.5.4",
-    "@bolt/utilities-spacing": "^0.5.0"
+    "@bolt/core": "^0.5.0-beta.1"
   },
-  "scripts": {
-    "prepublishOnly": "npm run build",
-    "build": "npm-run-all --parallel build:*",
-    "build:bolt": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry bolt-button=./src/button --output-filename='bolt-button.min.js' --output-public-path /scripts/",
-    "build:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js bolt-button=./src/button --output-filename='bolt-button.wwwd8.min.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-button/dist/"
-  }
+  "scripts": {}
 }
