--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "Xlint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
     "Xclean:lighthouse": "rm *.report.html",
-    "clean": "npm run clean:git && npm run clean:lerna",
+    "clean": "npm-run-all --parallel clean:*",
     "Xlint": "npm-run-all --parallel lint:* -c",
     "Xmocha": "npm run mocha:build-tools",
     "Xmocha:build-tools": "mocha ./packages/build-tools/**/tests/*.test.js",
