docs: add additional example demos of video player integration + customization, including w/ inline script configs for both inline and background variations of the video player

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -84,6 +84,10 @@ band_kitchen_sink:
   filename: band-kitchen-sink.twig
   path: src/_patterns/02-components/bolt-band/demo/band-kitchen-sink.twig
   namespace: '@bolt/band-kitchen-sink.twig'
+band_with_video_test:
+  filename: band-with-video-test.twig
+  path: src/_patterns/04-pages/d8-homepage/band-with-video-test.twig
+  namespace: '@bolt/band-with-video-test.twig'
 bare_list:
   filename: bare-list.twig
   path: src/_patterns/01-core/05-objects/bolt-bare-list-object/src/bare-list.twig
@@ -146,6 +150,10 @@ button:
   filename: button.twig
   path: src/_patterns/02-components/bolt-button/src/button.twig
   namespace: '@bolt/button.twig'
+button__icon_only:
+  filename: button--icon-only.twig
+  path: src/_patterns/02-components/bolt-button/demos/button--icon-only.twig
+  namespace: '@bolt/button--icon-only.twig'
 button_group:
   filename: button-group.twig
   path: src/_patterns/02-components/bolt-button-group/src/button-group.twig
