refactor: wire up styleguidekit-assets-default + styleguidekit-twig-default refactors for local dev

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ dist
 src/_twig-components
 src/_patterns/**/dist
 src/_patterns/**/dist/*
+packages/styleguidekit-assets-default
+packages/styleguidekit-twig-default
 
 apps/pattern-lab--workshop/src/_twig-components
 
