#309 Update component for new build tools: background-shapes

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "npm-run-all": "^4.1.2"
   },
   "workspaces": [
+    "packages/components/bolt-background-shapes",
     "packages/components/bolt-button",
     "packages/core",
     "packages/global",
