--- a/packages/components/05-bolt-background-shapes/package.json
+++ b/packages/components/05-bolt-background-shapes/package.json
@@ -1,15 +1,13 @@
 {
   "name": "@bolt/components-background-shapes",
   "description": "Background Component Shapes in Bolt",
-  "type": "pattern",
-  "patternType": "atoms",
-  "patternSubtype": "layout",
+  "style": "src/background-shapes.scss",
+  "twig": "src/background-shapes.twig",
   "keywords": [
     "bolt design system",
     "bolt",
     "css framework",
     "design system",
-    "objects"
   ],
   "version": "0.1.0-beta.2",
   "maintainers": [
@@ -38,11 +36,10 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/background-shapes.scss",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-all": "^0.5.4"
+    "@bolt/core": "^0.5.0-beta.1"
   }
 }
