chore: update manifest to reflect latest patterns Bolt; update package-lock.json

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -141,11 +141,6 @@ brightcove_player:
   filename: brightcove-player.twig
   path: src/_patterns/02-components/brightcove-player/src/brightcove-player.twig
   namespace: '@bolt/brightcove-player.twig'
-brightcove_player__inline_script:
-  filename: brightcove-player--inline-script.twig
-  path: >-
-    src/_patterns/02-components/brightcove-player/demo/brightcove-player--inline-script.twig
-  namespace: '@bolt/brightcove-player--inline-script.twig'
 button:
   filename: button.twig
   path: src/_patterns/02-components/bolt-button/src/button.twig
@@ -597,14 +592,32 @@ video:
   filename: video.twig
   path: src/_patterns/02-components/bolt-video/src/video.twig
   namespace: '@bolt/video.twig'
+video__background_video_with_inline_script_and_external_controls:
+  filename: video--background-video-with-inline-script-and-external-controls.twig
+  path: >-
+    src/_patterns/02-components/bolt-video/demo/video--background-video-with-inline-script-and-external-controls.twig
+  namespace: '@bolt/video--background-video-with-inline-script-and-external-controls.twig'
+video__external_controls:
+  filename: video--external-controls.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--external-controls.twig
+  namespace: '@bolt/video--external-controls.twig'
+video__inline_script:
+  filename: video--inline-script.twig
+  path: src/_patterns/02-components/bolt-video/demo/video--inline-script.twig
+  namespace: '@bolt/video--inline-script.twig'
+video__inline_script_with_external_controls:
+  filename: video--inline-script-with-external-controls.twig
+  path: >-
+    src/_patterns/02-components/bolt-video/demo/video--inline-script-with-external-controls.twig
+  namespace: '@bolt/video--inline-script-with-external-controls.twig'
 video_background:
   filename: video-background.twig
   path: src/_patterns/02-components/bolt-video/demo/video-background.twig
   namespace: '@bolt/video-background.twig'
-video_static_test:
-  filename: video-static-test.twig
-  path: src/_patterns/02-components/bolt-video/src/video-static-test.twig
-  namespace: '@bolt/video-static-test.twig'
+video_inline_script:
+  filename: _video-inline-script.twig
+  path: src/_patterns/02-components/bolt-video/src/_video-inline-script.twig
+  namespace: '@bolt/_video-inline-script.twig'
 video_tag:
   filename: _video-tag.twig
   path: src/_patterns/02-components/bolt-video/src/_video-tag.twig
