--- a/config/config.yml
+++ b/config/config.yml
@@ -118,6 +118,7 @@ plugins:
           - src/_patterns/02-components/bolt-page-footer/src
           - src/_patterns/02-components/bolt-page-header/src
           - src/_patterns/02-components/bolt-quote
+          - src/_patterns/02-components/bolt-search/src
           - src/_patterns/02-components/bolt-smooth-scroll/demo
           - src/_patterns/02-components/bolt-smooth-scroll/src
           - src/_patterns/02-components/bolt-sticky/demo
@@ -132,6 +133,7 @@ plugins:
           - src/_patterns/04-pages/bolt-homepage
           - src/_patterns/04-pages/bolt-theming-qa
           - src/_patterns/04-pages/d8-homepage
+          - src/_patterns/04-pages/d8-press
           - src/_patterns/04-pages/d8-product-landing
           - src/_patterns/04-pages/d8-resource-details
     roots: {}
