#309 Update component for new build tools: action-blocks

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@bolt/build-tools": "0.5.1",
+    "@bolt/components-action-blocks": "0.3.0",
     "@bolt/components-background": "0.3.0-beta.2",
     "@bolt/components-background-shapes": "0.1.0-beta.2",
     "@bolt/components-button": "0.7.0-beta.5",
