#309 Update component for new build tools: button-group

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "packages/components/bolt-background-shapes",
     "packages/components/bolt-blockquote",
     "packages/components/bolt-button",
+    "packages/components/bolt-button-group",
     "packages/core",
     "packages/global",
     "packages/build-tools",
