--- a/packages/components/bolt-button-group/package.json
+++ b/packages/components/bolt-button-group/package.json
@@ -1,8 +1,6 @@
 {
   "name": "@bolt/components-button-group",
   "description": "Button Group Component in Bolt",
-  "type": "pattern",
-  "patternType": "molecules",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -38,6 +36,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-spacing": "^0.5.0"
+    "@bolt/core": "^0.5.0-beta.1"
   }
 }
