#309 Update component for new build tools: chip

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "packages/components/bolt-blockquote",
     "packages/components/bolt-button",
     "packages/components/bolt-button-group",
+    "packages/components/bolt-chip",
     "packages/core",
     "packages/global",
     "packages/build-tools",
