--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -22,6 +22,7 @@
     "@bolt/components-blockquote": "0.2.4",
     "@bolt/components-button": "0.7.0-beta.5",
     "@bolt/components-button-group": "0.2.0",
+    "@bolt/components-chip": "0.2.0",
     "@bolt/core": "0.5.0-beta.1",
     "@bolt/global": "0.5.0"
   }
