--- a/packages/components/bolt-chip/package.json
+++ b/packages/components/bolt-chip/package.json
@@ -1,13 +1,11 @@
 {
   "name": "@bolt/components-chip",
   "description": "Chip Component in Bolt",
-  "type": "pattern",
   "keywords": [
     "bolt design system",
     "bolt",
     "css framework",
-    "design system",
-    "objects"
+    "design system"
   ],
   "version": "0.2.0",
   "maintainers": [
@@ -32,7 +30,11 @@
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
   "style": "src/_chip.scss",
+  "twig": "src/chip.twig",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/core": "0.5.0-beta.1"
   }
 }
