#309 Update component for new build tools: chip-list

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "packages/components/bolt-button",
     "packages/components/bolt-button-group",
     "packages/components/bolt-chip",
+    "packages/components/bolt-chip-list",
     "packages/core",
     "packages/global",
     "packages/build-tools",
