--- a/packages/components/bolt-chip-list/package.json
+++ b/packages/components/bolt-chip-list/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@bolt/components-chip-list",
   "description": "Chip List Component in Bolt",
-  "type": "pattern",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -31,12 +30,12 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-  "style": "src/_chip.scss",
+  "twig": "chip-list.twig",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
     "@bolt/components-chip": "^0.2.0",
-    "@bolt/objects-inline-list": "^0.4.0"
+    "@bolt/global": "0.5.0"
   }
 }
