#309 Update component for new build tools: link

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "packages/components/bolt-chip",
     "packages/components/bolt-chip-list",
     "packages/components/bolt-figure",
+    "packages/components/bolt-link",
     "packages/core",
     "packages/global",
     "packages/build-tools",
