--- a/packages/components/bolt-link/package.json
+++ b/packages/components/bolt-link/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@bolt/components-link",
-  "style": "src/link.scss",
   "description": "Link Component",
   "keywords": [
     "eyeglass-module",
@@ -20,6 +19,8 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
+  "style": "src/link.scss",
+  "twig": "src/link.twig",
   "publishConfig": {
     "access": "public"
   }
