#309 Update component for new build tools: ordered-list

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "packages/components/bolt-chip-list",
     "packages/components/bolt-figure",
     "packages/components/bolt-link",
+    "packages/components/bolt-ordered-list",
     "packages/core",
     "packages/global",
     "packages/build-tools",
