--- a/packages/components/bolt-ordered-list/package.json
+++ b/packages/components/bolt-ordered-list/package.json
@@ -1,8 +1,6 @@
 {
 	"name": "@bolt/components-ordered-list",
 	"description": "Ordered-list Component in Bolt",
-	"type": "pattern",
-	"patternType": "molecules",
 	"keywords": [
 		"bolt design system",
 		"bolt",
@@ -38,12 +36,6 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/settings-colors": "^0.6.1",
-		"@bolt/settings-font-size": "^0.8.4",
-		"@bolt/settings-font-weight": "^0.8.3",
-		"@bolt/tools-color-palette": "^0.5.2",
-		"@bolt/tools-font-size": "^0.5.4",
-		"@bolt/tools-font-weight": "^0.5.3",
-		"@bolt/tools-spacing": "^0.5.0"
+		"@bolt/core": "^0.5.0-beta.1"
 	}
 }
