#309 Update component for new build tools: unordered-list

--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "packages/components/bolt-figure",
     "packages/components/bolt-link",
     "packages/components/bolt-ordered-list",
+    "packages/components/bolt-unordered-list",
     "packages/core",
     "packages/global",
     "packages/build-tools",
