--- a/packages/components/bolt-unordered-list/package.json
+++ b/packages/components/bolt-unordered-list/package.json
@@ -38,8 +38,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/settings-colors": "^0.6.1",
-    "@bolt/tools-color-palette": "^0.5.2",
-    "@bolt/tools-spacing": "^0.5.0"
+    "@bolt/core": "^0.5.0-beta.1"
   }
 }
