#309 Update component for new build tools: teaser

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -27,6 +27,7 @@
     "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/components-link": "0.2.1",
     "@bolt/components-ordered-list": "0.1.4",
+    "@bolt/components-teaser": "0.2.0",
     "@bolt/components-unordered-list": "0.1.2",
     "@bolt/core": "0.5.0-beta.1",
     "@bolt/global": "0.5.0"
