--- a/packages/components/bolt-teaser/package.json
+++ b/packages/components/bolt-teaser/package.json
@@ -20,8 +20,12 @@
   "bugs": {
     "url": "https://github.com/pega-digital/bolt/issues"
   },
+  "style": "src/teaser.scss",
+  "twig": "src/teaser.twig",
   "publishConfig": {
     "access": "public"
   },
-  "style": "src/teaser.scss"
+  "dependencies": {
+    "@bolt/core": "^0.5.0-beta.1"
+  }
 }
