#309 Update component for new build tools: page-header and page-footer

--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "packages/components/bolt-figure",
     "packages/components/bolt-link",
     "packages/components/bolt-ordered-list",
+    "packages/components/bolt-page-footer",
+    "packages/components/bolt-page-header",
     "packages/components/bolt-teaser",
     "packages/components/bolt-unordered-list",
     "packages/core",
