--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -27,6 +27,8 @@
     "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/components-link": "0.2.1",
     "@bolt/components-ordered-list": "0.1.4",
+    "@bolt/components-page-footer": "0.4.0",
+    "@bolt/components-page-header": "0.0.3-beta.4",
     "@bolt/components-teaser": "0.2.0",
     "@bolt/components-unordered-list": "0.1.2",
     "@bolt/core": "0.5.0-beta.1",
