Fixing trailing comma in package.json for Background Shapes

--- a/packages/components/bolt-background-shapes/package.json
+++ b/packages/components/bolt-background-shapes/package.json
@@ -7,7 +7,7 @@
     "bolt design system",
     "bolt",
     "css framework",
-    "design system",
+    "design system"
   ],
   "version": "0.1.0-beta.2",
   "maintainers": [
