Birth of `bolt` CLI ⚡️ and build and watch tasks for WebPack and Pattern Lab

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "main": "bolt.js",
   "scripts": {
-    "build": "bolt-build",
-    "start": "bolt-build --watch"
+    "build": "bolt build",
+    "build:noisy": "bolt build --verbosity 5",
+    "start": "bolt build --watch"
   },
   "repository": {
     "type": "git",
