--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -5,7 +5,7 @@
   "description": "Curated collection of front-end build tools in the Bolt Design System.",
   "main": "index.js",
   "bin": {
-    "bolt-build": "cli.js"
+    "bolt": "index.js"
   },
   "repository": {
     "type": "git",
@@ -29,14 +29,20 @@
     "@theme-tools/sass-import-globbing": "^1.0.0",
     "autoprefixer": "^7.2.4",
     "babel-loader": "^7.1.2",
+    "chalk": "^2.3.0",
+    "chokidar": "^2.0.0",
     "clean-css-loader": "^0.1.4",
     "commander": "^2.12.2",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "js-yaml": "^3.10.0",
+    "lodash.debounce": "^4.0.8",
+    "node-notifier": "^5.1.2",
     "npm-sass": "^2.2.1",
     "postcss-discard-duplicates": "^2.1.0",
     "postcss-loader": "^2.0.10",
     "sass-loader": "^6.0.6",
+    "semver": "^5.4.1",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-manifest-plugin": "^1.3.2"
