Revert "chore: manually version bump in-progress packages to clearly identify as v1.0-specific work"
This reverts commit 93d51236282ca07dad08580a3ee0981d4d5929b7.

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -15,11 +15,10 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/build-tools": "1.0.0-alpha.0-x",
-    "@bolt/components-background-shapes": "1.0.0-alpha.0-x",
-    "@bolt/components-button": "1.0.0-alpha.0-x",
-    "@bolt/components-color-swatch": "1.0.0-alpha.0-x",
-    "@bolt/core": "1.0.0-alpha.0-x",
-    "@bolt/global": "1.0.0-alpha.0-x"
+    "@bolt/build-tools": "0.5.1",
+    "@bolt/components-background-shapes": "0.1.0-beta.2",
+    "@bolt/components-button": "0.7.0-beta.5",
+    "@bolt/core": "0.5.0-beta.1",
+    "@bolt/global": "0.5.0"
   }
 }
