fix: re-adding updates accidently wiped from hotfix

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bootstrap": "lerna bootstrap --reject-cycles",
     "postbootstrap": "node scripts/monorepo-tests.js",
     "clean:git": "git clean -xdf",
-    "deploy": "netlify deploy -s bolt.netlify.com -p dist",
+    "deploy": "netlify deploy -s bolt.netlify.com -p apps/pattern-lab--workshop/www",
     "Xlint:js": "eslint ./build-tools",
     "Xlint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
@@ -25,7 +25,7 @@
     "Xbuild": "export NODE_ENV=production && npm run pre-build && gulp build",
     "Xbuild:full": "export NODE_ENV=production && npm run pre-build && gulp build:full",
     "setup": "npm run bootstrap && npm run composer:setup",
-    "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run composer:clean && npm run composer:install; fi",
+    "composer:setup": "if [ ! -f ./apps/pattern-lab--workshop/www/index.html ]; then npm run composer:clean && npm run composer:install; fi",
     "composer:install": "composer install -d apps/pattern-lab--workshop --prefer-source --no-interaction --no-dev",
     "composer:clean": "rm -rf apps/pattern-lab--workshop/composer.lock && rm -rf apps/pattern-lab--workshop/vendor && rm -rf apps/pattern-lab--workshop/src/_twig-components",
     "Xtest:travis": "yarn pretest && yarn lint",
@@ -86,6 +86,7 @@
   "workspaces": [
     "packages/components/background-shapes",
     "packages/components/button",
+    "packages/components/color-swatch",
     "packages/core",
     "packages/global",
     "packages/build-tools",
