Build Tool Improvements + 1st Round PL Improvements (#331)
* feat: add Webpack Dev Server

* refactor: update built tools config API; update to accomodate browsersync + webpack-dev-server config

* refactor: update PL head / footer to use path data from Webpack manifest

* chore: update yarn.lock + add WIP global config testing node-based template resolution

* feat: add PL boot up animation on server start + patch allowing modified index.html + splash-screen.html files to be used instead; minor updates to improve PL performance + speed up initial start render

* chore: update composer.lock; disable PL styleguidekitRegenerate config for now

* chore: resolving merge conflicts

* chore: minor cleanup per PR feedback

* fix: re-adding updates accidently wiped from hotfix

* fix: bumping color swatch version package to latest published to NPM; adding to PL as a dependency

* fix: removing WIP Node-integrated data work in Twig global data + commenting out data reference to avoid warnings till JSON data being referenced is re-added

* chore: remove stray gulp-util reference

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -24,6 +24,7 @@
     "@bolt/components-button-group": "0.2.0",
     "@bolt/components-chip": "0.2.0",
     "@bolt/components-chip-list": "0.2.0",
+    "@bolt/components-color-swatch": "0.9.0",
     "@bolt/components-figure": "0.2.0-beta.2",
     "@bolt/components-link": "0.2.1",
     "@bolt/components-ordered-list": "0.1.4",
