--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -1,39 +1,46 @@
 v: 2.6.0
+regenerateStyleguideKit: 'true'
 overrideConfig: false
 ie:
-  - DS_Store
-  - less
-  - scss
+    - DS_Store
+    - less
+    - scss
+    - html
+    - js
 id:
-  - scss
-  - .svn
-  - .sass-cache
-  - scripts
-  - styles
+    - scss
+    - .svn
+    - .sass-cache
+    - scripts
+    - styles
+    - splash-screen.html
 cleanPublic: false
 patternStates:
-  - inprogress
-  - inreview
-  - complete
+    - inprogress
+    - inreview
+    - complete
 styleGuideExcludes: ''
 cacheBusterOn: 'true'
-exportDir: export
-publicDir: dist
+publicDir: www
 sourceDir: src
 defaultPattern: pages-bolt-homepage
 defaultShowPatternInfo: false
+ishMinimum: '240'
+ishMaximum: '2600'
 ishViewportRange:
-  s:
-    - 320
-    - 600
-  m:
-    - 600
-    - 1000
-  l:
-    - 1000
-    - 2600
+    s:
+        - 320
+        - 600
+    m:
+        - 600
+        - 1000
+    l:
+        - 1000
+        - 2600
 ishControlsHide:
-  - hay
+    - hay
+    - disco
+    - random
 styleguideKit: pattern-lab/styleguidekit-twig-default
 styleguideKitPath: vendor/pattern-lab/styleguidekit-twig-default
 lineageMatch: >-
@@ -51,20 +58,25 @@ twigFunctionExt: function.php
 twigTagExt: tag.php
 twigTestExt: test.php
 extensions:
-  data: .data.json
-  schemas: .json
-  templates: .twig
-  docs: .docs.md
-  sg: .md
+    data: .data.json
+    schemas: .json
+    templates: .twig
+    docs: .docs.md
+    sg: .md
 plugins:
   twigNamespaces:
     enabled: true
     namespaces:
+      bolt-assets:
+        recursive: true
+        paths:
+          - www/build
       bolt:
         recursive: true
         paths:
           - ../../packages
           - src/_patterns
+          - src
       utils:
         recursive: true
         paths:
